Thu Feb  3 19:15:55 2005  Manish Singh  <yosh@gimp.org>

	* gdk/x11/gdkdrawable-x11.c: #include cairo-xlib.h

2005-02-03  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkdrawable.[ch] gdkpixmap.c gdkwindow.c: Add
	gdk_drawable_set_cairo_target().

	* tests/testtreeflow.c (enum): Use grand not rand as a variable
	name because one of the cairo headers is pulling in stdlib.h.

	* tests/testcairo.c tests/Makefile.am: Add a simple cairo based
	example.

	* configure.in: Bump release to 2.7.0, gtk_binary_version to 2.7.0.

 	* Require libpangocairo for all backends.

2005-02-03  Tor Lillqvist  <tml@novell.com>

	* modules/input/gtkimcontextime.c (get_pango_attr_list): Use the
	wide character version of ImmGetCompositionString() here,
	too. (#165278, Takuro Ashie)

2005-02-03  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkmenu.c (gtk_menu_handle_scrolling): Don't do
	one roundtrip per motion event.  (#166173, pointed out
	by Chris Lee, patch by Søren Sandmann)

	* gtk/gtk.symbols: 
	* gtk/gtkstock.h: 
	* gtk/gtkstock.c (gtk_stock_set_translate_func): 
	New function which allows to change the function used for
	translation stock labels, on a per-domain basis. Use this
	functionality to switch the GTK+ stock items to use Q_()
	prefixed msgids.  (#166179, Funda Wang)
	
	* gdk/gdkkeynames.c: Make the gdk_key array const (#166075,
	Tommi Komulainen)

2005-02-02  Federico Mena Quintero  <federico@ximian.com>

	Merged from gtk-2-6:

	* gtk/gtkfilechooserdefault.c (pending_select_paths_process):
	Don't select the first row if the chooser is not mapped.  This
	happens when it's acting on behalf of GtkFileChooserButton.  Also,
	don't select the first row if we are in SAVE or CREATE_FOLDER
	modes --- I had missed that (see the ChangeLog entry from
	2005-01-18).  Fixes #165264.

2005-02-02  Tor Lillqvist  <tml@novell.com>

	Implement lazy extended input initialization on Win32, by Robert
	Ögren. Fixes #163163, possibly #162334. Lazy initialization would